--- a/benchmark/def_methods.yaml
+++ b/benchmark/def_methods.yaml
@@ -1,14 +1,12 @@
 # Define the methods to be evaluated and its parameter configuration
 methods:
-    - name: rejection
-      type: sampling_methods.rejection.CRejectionSampling
+    - name: m_pmc
+      type: sampling_methods.m_pmc.CMixturePMC
       params:
-        scaling: 1
-        proposal: distributions.CMultivariateUniform.CMultivariateUniform(np.array([0.0]),np.array([1.0]))
-        kde_bw: 0.01
-        space_min: np.array([-1.0])
-        space_max: np.array([1.0])
-        dims: 1
+        K: 20         # Number of samples per proposal distribution
+        N: 10          # Number of proposal distributions
+        J: 1000       # Limit number of samples
+        sigma: 0.01   # Scaling parameter of the spherical gaussian proposal distributions
 
     - name: mcmc_mh
       type: sampling_methods.metropolis_hastings.CMetropolisHastings
@@ -16,7 +14,44 @@ methods:
         n_burnin: 10
         n_steps: 2
         kde_bw: 0.01
-        proposal_d: distributions.CMultivariateNormal.CMultivariateNormal(np.array([0.0]),np.array([[0.01]]))
-        space_min: np.array([-1.0])
-        space_max: np.array([1.0])
-        dims: 1
+        proposal_sigma: 0.01 # Scaling parameter of the spherical gaussian MC proposal distribution
+
+    - name: rejection
+      type: sampling_methods.rejection.CRejectionSampling
+      params:
+        scaling: 1
+        proposal: "'distributions.CMultivariateUniform.CMultivariateUniform(np.zeros(self.ndims), (self.space_max-self.space_min) / 2)'"
+        kde_bw: 0.01
+
+    - name: lais
+      type: sampling_methods.layered_ais.CLayeredAIS
+      params:
+        K: 3          # Number of samples per proposal distribution
+        N: 5          # Number of proposal distributions
+        J: 1000       # Limit number of samples
+        L: 10         # Number of MCMC moves during the proposal adaptation
+        sigma: 0.01   # Scaling parameter of the spherical gaussian proposal distributions
+        mh_sigma: 0.005  # Scaling parameter of the mcmc proposal distributions moment update
+
+    - name: dm_ais
+      type: sampling_methods.dm_ais.CDeterministicMixtureAIS
+      params:
+        K: 10         # Number of samples per proposal distribution
+        N: 2          # Number of proposal distributions
+        J: 1000       # Limit number of samples
+        sigma: 0.01   # Scaling parameter of the spherical gaussian proposal distributions
+
+    - name: nested
+      type: sampling_methods.nested.CNestedSampling
+      params:
+        proposal: "'distributions.CMultivariateNormal.CMultivariateNormal(np.zeros(self.ndims), np.diag(np.ones(self.ndims) * 0.01))'"
+        N: 2          # Number of proposal distributions
+        kde_bw: 0.01
+
+    - name: multi_nested
+      type: sampling_methods.multi_nested.CMultiNestedSampling
+      params:
+        proposal: "'distributions.CMultivariateNormal.CMultivariateNormal(np.zeros(self.ndims), np.diag(np.ones(self.ndims) * 0.01))'"
+        N: 2          # Number of proposal distributions
+        kde_bw: 0.01
+
