--- a/benchmark/def_methods.yaml
+++ b/benchmark/def_methods.yaml
@@ -41,6 +41,41 @@ methods:
         J: 1000       # Limit number of samples
         sigma: 0.01   # Scaling parameter of the spherical gaussian proposal distributions
 
+    - name: tp_mixture_leaf_haar
+      type: sampling_methods.tree_pyramid.CTreePyramidSampling
+      params:
+        method: "'mixture'"
+        resampling: "'leaf'"
+        kernel: "'haar'"
+
+    - name: tp_mixture_none_haar
+      type: sampling_methods.tree_pyramid.CTreePyramidSampling
+      params:
+        method: "'mixture'"
+        resampling: "'none'"
+        kernel: "'haar'"
+
+    - name: tp_simple_none_haar
+      type: sampling_methods.tree_pyramid.CTreePyramidSampling
+      params:
+        method: "'simple'"
+        resampling: "'none'"
+        kernel: "'haar'"
+
+    - name: tp_simple_leaf_haar
+      type: sampling_methods.tree_pyramid.CTreePyramidSampling
+      params:
+        method: "'simple'"
+        resampling: "'leaf'"
+        kernel: "'haar'"
+
+    - name: tp_dm_leaf_normal
+      type: sampling_methods.tree_pyramid.CTreePyramidSampling
+      params:
+        method: "'dm'"
+        resampling: "'leaf'"
+        kernel: "'normal'"
+
     - name: nested
       type: sampling_methods.nested.CNestedSampling
       params:
