--- a/benchmark/def_benchmark.yaml
+++ b/benchmark/def_benchmark.yaml
@@ -1,8 +1,11 @@
 # Define the target densities used for evaluation and label their categories and provide evaluation parameters
 targets:
     - name: gmm
-      type: distributions.CGaussianMixtureModel.CGaussianMixtureModel
-      params: {mu: [[0.0, 0.0], [-0.2, 0.4]], sigma: [[0.01, 0.1], [0.001, 0.01]], weights:[0.5, 0.5]} #WARNING!! Notice the double bracket when defining the cov
+      type: distributions.CGaussianMixtureModel
+      params: {means: [[0.0, 0.0], [-0.2, 0.4]],
+               sigmas: [[0.01, 0.1], [0.001, 0.01]],  # WARNING!! Notice the double bracket when defining the sigmas
+               weights:[0.5, 0.5],
+               support:[[-1, -1], [1, 1]]}
       space_size: 1.0
       batch_size: 2
       nsamples: 200
@@ -12,8 +15,8 @@ targets:
       tags: [high_kurtosis, low_skew, multimodal, close_modes]
 
     - name: normal
-      type: distributions.CMultivariateNormal.CMultivariateNormal
-      params: {mean: [0.0], cov: [[0.2]]} #WARNING!! Notice the double bracket when defining the cov
+      type: distributions.CMultivariateNormal
+      params: {mean: [0.0], sigma: [[0.2]], support:[-5, 5]}  # WARNING!! Notice the double bracket when defining the cov
       space_size: 1.0
       batch_size: 2
       nsamples: 100
@@ -23,8 +26,11 @@ targets:
       tags: [low_kurtosis, low_skew, unimodal]
 
     - name: gmm
-      type: distributions.CGaussianMixtureModel.CGaussianMixtureModel
-      params: {mu: [[0.0], [-0.2]], sigma: [[0.01], [0.001]], weights:[0.5, 0.5]} #WARNING!! Notice the double bracket when defining the cov
+      type: distributions.CGaussianMixtureModel
+      params: {means: [[0.0], [-0.2]],
+               sigmas: [[0.01], [0.001]],  # WARNING!! Notice the double bracket when defining the cov
+               weights:[0.5, 0.5],
+               support:[[-1, -1], [1, 1]]}
       space_size: 1.0
       batch_size: 2
       nsamples: 100
