--- a/benchmark/def_benchmark.yaml
+++ b/benchmark/def_benchmark.yaml
@@ -39,12 +39,17 @@ targets:
       domain_max: np.array([1])
       tags: [low_kurtosis, low_skew, unimodal]
 
+# Number of times each experiment is repeated
+nreps: 10
 
+# Random seed used for reproducibility
+rseed: 0
+
+# Metrics computed
 metrics: [NESS, JSD, T]
 
-
 display:
-    value: true               # Display 1D and 2D density plots on the screen
+    value: true             # Display 1D and 2D density plots on the screen
     display_path: results/  # If value is true, save the plots as a .png in the provided path
 
     animation: {value: true,                    # Compile the sequence of visualized sampling steps into an animation
