--- a/benchmark/def_benchmark.yaml
+++ b/benchmark/def_benchmark.yaml
@@ -1,5 +1,30 @@
 # Define the target densities used for evaluation and label their categories and provide evaluation parameters
 targets:
+    - name: banana2D
+      type: distributions.rare.banana2d.Banana2D
+      params: {}
+      space_size: 10.0
+      batch_size: 2
+      nsamples: 1000
+      nsamples_eval: 2000
+      domain_min: np.array([-10, -10])
+      domain_max: np.array([10, 10])
+      tags: [benchden, low_kurtosis, low_skew]
+
+    - name: gmm
+      type: distributions.CGaussianMixtureModel
+      params: {means: [[0.0, 0.0], [-0.2, 0.4]],
+               sigmas: [[0.01, 0.1], [0.001, 0.01]],  # WARNING!! Notice the double bracket when defining the sigmas
+               weights:[0.5, 0.5],
+               support:[[-1, -1], [1, 1]]}
+      space_size: 1.0
+      batch_size: 2
+      nsamples: 200
+      nsamples_eval: 2000
+      domain_min: np.array([-1,-1])
+      domain_max: np.array([1,1])
+      tags: [high_kurtosis, low_skew, multimodal, close_modes]
+
     - name: gmm
       type: distributions.CGaussianMixtureModel
       params: {means: [[1.5], [-4.2]],
@@ -13,20 +38,6 @@ targets:
       domain_min: np.array([-10])
       domain_max: np.array([10])
       tags: [high_kurtosis, low_skew, multimodal, separate_modes, disjoint_support]
-
-#    - name: gmm
-#      type: distributions.CGaussianMixtureModel
-#      params: {means: [[0.0, 0.0], [-0.2, 0.4]],
-#               sigmas: [[0.01, 0.1], [0.001, 0.01]],  # WARNING!! Notice the double bracket when defining the sigmas
-#               weights:[0.5, 0.5],
-#               support:[[-1, -1], [1, 1]]}
-#      space_size: 1.0
-#      batch_size: 2
-#      nsamples: 200
-#      nsamples_eval: 2000
-#      domain_min: np.array([-1,-1])
-#      domain_max: np.array([1,1])
-#      tags: [high_kurtosis, low_skew, multimodal, close_modes]
 
     - name: normal
       type: distributions.CMultivariateNormal
