--- a/benchmark/tp_ais_experiments/tpais/def_methods_TPAIS90.yaml
+++ b/benchmark/tp_ais_experiments/tpais/def_methods_TPAIS90.yaml
@@ -1,19 +1,10 @@
 # Define the methods to be evaluated and its parameter configuration
 methods:
-    - name: TP_AISr
+    - name: TP_AISr_ESS90
       type: sampling_methods.CTreePyramidSampling
       params:
         method: "'simple'"
         resampling: "'leaf'"
-        kernel: "'haar'"
-        ess_target: 0.9
-        parallel_samples: 512
-
-    - name: TP_AIS
-      type: sampling_methods.CTreePyramidSampling
-      params:
-        method: "'simple'"
-        resampling: "'none'"
         kernel: "'haar'"
         ess_target: 0.9
         parallel_samples: 512
