--- a/benchmark/tp_ais_experiments/tpais/def_methods_TPAIS70.yaml
+++ b/benchmark/tp_ais_experiments/tpais/def_methods_TPAIS70.yaml
@@ -1,10 +1,10 @@
 # Define the methods to be evaluated and its parameter configuration
 methods:
-    - name: TP_AISr_ESS70
+    - name: TP_AISr
       type: sampling_methods.CTreePyramidSampling
       params:
         method: "'simple'"
         resampling: "'leaf'"
         kernel: "'haar'"
-        ess_target: 0.7
+        ess_target: 1000.0
         parallel_samples: 512
