--- a/benchmark/def_config.yaml
+++ b/benchmark/def_config.yaml
@@ -8,7 +8,7 @@ rseed: 0
 metrics: [KLD, MEM, T]
 
 display:
-    value: false             # Display 1D and 2D density plots on the screen for debug
+    value: true             # Display 1D and 2D density plots on the screen for debug
     display_path: results/   # If value is true, save the debug plots as a .png in the provided path
 
     animation: {value: true,                    # Compile the sequence of visualized sampling steps into an animation
