Better organization of config file

--- a/benchmark/def_config.yaml
+++ b/benchmark/def_config.yaml
@@ -1,20 +1,25 @@
 # Number of times each experiment is repeated
 nreps: 3
 
-# Random seed used for reproducibility
-rseed: 0
+# Random seed used for reproducibility. Set to -1 to avoid setting the random seed.
+rseed: -1
 
 # Metrics computed
 metrics: [KLD, JSD, MEM, T]
 
-display:
-    value: true             # Display 1D and 2D density plots on the screen for debug
-    display_path: results/   # If value is true, save the debug plots as a .png in the provided path
+# Debug mode config and debug display
+debug: {algo: false,                         # Debug mode argument passed to algorithms: [true, false]
+        text: true,                          # Show experiment execution progress on terminal: [true, false]
+        plot: {show: true,                   # Plot sampling algorithm progress and show on screen: [true, false]
+               save: faltruese,                   # Save the sampling algo plot on file: [true, false]
+               path: results/debug_plots/}}  # Path to save the plot algo progress: [string]
 
-    animation: {value: true,                    # Compile the sequence of visualized sampling steps into an animation
-                fps: 1,                         # Frames per second used for the animation
-                animation_path: results/anim/}  # If value is true, save the plots as a .png in the provided path
+# Animation module configuration
+animation: {enable: true,                    # Compile the sequence of visualized sampling steps into an animation
+            fps: 1,                         # Frames per second used for the animation
+            animation_path: results/anim/}  # If value is true, save the plots as a .png in the provided path
 
+# Benchmark execution results configuration
 output:
     file: results/results.txt
     make_plots: true
