--- a/benchmark/tp_ais_experiments/benchmarks/def_benchmark_normal_123D.yaml
+++ b/benchmark/tp_ais_experiments/benchmarks/def_benchmark_normal_123D.yaml
@@ -2,39 +2,29 @@ targets:
     - name: normal
       type: distributions.CGaussianMixtureModel
       params: { means: [[2.11483166]],
-    sigmas: [[0.02472518]],
-    weights: [1.],
-    support: [[-8.],
- [ 8.]]}
-      space_size: 8.0
+                sigmas: [[0.02472518]],
+                weights: [1.],
+                support: [[0.], [ 4.]]}
       batch_size: 64
       nsamples: 2500
       nsamples_eval: 1000
-      domain_min: np.array([-8.])
-      domain_max: np.array([8.])
+
     - name: normal
       type: distributions.CGaussianMixtureModel
       params: { means: [[-1.47985529,-1.66858574]],
-    sigmas: [[0.23615098,0.25958088]],
-    weights: [1.],
-    support: [[-8.,-8.],
- [ 8., 8.]]}
-      space_size: 8.0
+                sigmas: [[0.23615098,0.25958088]],
+                weights: [1.],
+                support: [[-4.,-4.], [ 1., 1.]]}
       batch_size: 128
       nsamples: 12500
       nsamples_eval: 2000
-      domain_min: np.array([-8.,-8.])
-      domain_max: np.array([8.,8.])
+
     - name: normal
       type: distributions.CGaussianMixtureModel
       params: { means: [[ 3.01718071,-0.1569243 ,-1.13884829]],
-    sigmas: [[0.10431801,0.14834458,0.17478444]],
-    weights: [1.],
-    support: [[-8.,-8.,-8.],
- [ 8., 8., 8.]]}
-      space_size: 8.0
+                sigmas: [[0.10431801,0.14834458,0.17478444]],
+                weights: [1.],
+                support: [[2.,-3.,-2.],[ 4., 2., 1.]]}
       batch_size: 1024
       nsamples: 62500
       nsamples_eval: 3000
-      domain_min: np.array([-8.,-8.,-8.])
-      domain_max: np.array([8.,8.,8.])
