--- a/benchmark/tp_ais_experiments/benchmarks/def_benchmark_normal_4D.yaml
+++ b/benchmark/tp_ais_experiments/benchmarks/def_benchmark_normal_4D.yaml
@@ -2,13 +2,9 @@ targets:
     - name: normal
       type: distributions.CGaussianMixtureModel
       params: { means: [[ 0.27968102, 1.75195615, 3.00892124,-2.49395313]],
-    sigmas: [[0.03985567,0.02564364,0.28145178,0.04714717]],
-    weights: [1.],
-    support: [[-8.,-8.,-8.,-8.],
- [ 8., 8., 8., 8.]]}
-      space_size: 8.0
+                sigmas: [[0.03985567,0.02564364,0.28145178,0.04714717]],
+                weights: [1.],
+                support: [[-1.,1.,0.,-3.], [ 1., 3., 6., -1.]]}
       batch_size: 2048
       nsamples: 312500
       nsamples_eval: 4000
-      domain_min: np.array([-8.,-8.,-8.,-8.])
-      domain_max: np.array([8.,8.,8.,8.])
