add dims parameter for coherency

--- a/benchmark/tp_ais_experiments/benchmarks/def_benchmark_banana2D.yaml
+++ b/benchmark/tp_ais_experiments/benchmarks/def_benchmark_banana2D.yaml
@@ -2,7 +2,7 @@
 targets:
     - name: banana2D
       type: distributions.rare.banana2d.Banana2D
-      params: {}
+      params: {dims: 2}
       batch_size: 32
       nsamples: 12000
       nsamples_eval: 2000
