Metrics used in the paper

--- a/benchmark/tp_ais_experiments/def_config.yaml
+++ b/benchmark/tp_ais_experiments/def_config.yaml
@@ -5,7 +5,7 @@ nreps: 10
 rseed: 0
 
 # Metrics computed
-metrics: [KLD, JSD, MEM, T, EVMSE]
+metrics: [JSD, MEM, T]
 
 # Debug mode config and debug display
 debug: {algo: false,                         # Debug mode argument passed to algorithms: [true, false]
